Edit css and cleaned up js

--- a/index.html
+++ b/index.html
@@ -13,26 +13,26 @@
                 <div class="showOperation"></div>
             </div>
             <div class="buttonsDisplay">
-                <div class="buttons-syle buttons clearBtn">AC</div>
-                <div class="buttons-syle powersBtn buttons">x^2</div>
-                <div class="buttons-syle percentBtn buttons">%</div>
-                <div class="buttons-syle divisionBtn buttons">/</div>
+                <div class="buttons-syle buttons clearBtn nonNums">AC</div>
+                <div class="buttons-syle powersBtn buttons nonNums">x^2</div>
+                <div class="buttons-syle percentBtn buttons nonNums">%</div>
+                <div class="buttons-syle divisionBtn buttons nonNums">/</div>
                 <div class="buttons-syle buttons">7</div>
                 <div class="buttons-syle buttons">8</div>
                 <div class="buttons-syle buttons">9</div>
-                <div class="buttons-syle multiplyBtn buttons">*</div>
+                <div class="buttons-syle multiplyBtn buttons nonNums">*</div>
                 <div class="buttons-syle buttons">4</div>
                 <div class="buttons-syle buttons">5</div>
                 <div class="buttons-syle buttons">6</div>
-                <div class="buttons-syle addBtn buttons">+</div>
+                <div class="buttons-syle addBtn buttons nonNums">+</div>
                 <div class="buttons-syle buttons">1</div>
                 <div class="buttons-syle buttons">2</div>
                 <div class="buttons-syle buttons">3</div>
-                <div class="buttons-syle subtractBtn buttons">-</div>
+                <div class="buttons-syle subtractBtn buttons nonNums">-</div>
                 <div class="buttons-syle buttons">0</div>
                 <div class="buttons-syle decimalBtn buttons">.</div>
                 <div class="buttons-syle buttons deleteBtn">DEL</div>
-                <div class="buttons-syle equalBtn buttons">=</div>
+                <div class="buttons-syle equalBtn buttons nonNums">=</div>
             </div>
         </div>
         <footer>Built by hpthu0697</footer>
