--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class="buttons-syle buttons">0</div>
                 <div class="buttons-syle decimalBtn buttons">.</div>
                 <div class="buttons-syle buttons deleteBtn">DEL</div>
-                <div class="buttons-syle equalBtn buttons nonNums">=</div>
+                <div class="buttons-syle equalBtn nonNums">=</div>
             </div>
         </div>
         <footer>Built by hpthu0697</footer>
